cc lab screen overflow navbar fix - aparna vinod details updated

--- a/css/style.css
+++ b/css/style.css
@@ -1,4 +1,4 @@
-@import url("https://fonts.googleapis.com/css2?family=Bebas+Neue&family=Montserrat:wght@600&family=Raleway:ital,wght@0,400;0,600;1,300&display=swap");
+@import url("https://fonts.googleapis.com/css2?family=Bebas+Neue&family=Montserrat:wght@600&family=Raleway:ital,wght@0,300;0,400;0,600;1,300&display=swap");
 
 @import url('https://fonts.googleapis.com/css2?family=Anton&family=PT+Sans:ital,wght@0,400;0,700&family=Passion+One:wght@400;700;900&display=swap');
 
@@ -26,7 +26,6 @@ a {
 body {
   margin: 0;
   padding: 0;
-  /* overflow-x: hidden; */
   overflow-y: scroll;
   cursor: grab;
 }
@@ -35,6 +34,7 @@ body {
 /* NAVBAR  */
 
 .navbar {
+  /* visibility: hidden; */
   width: 100%;
   /* height: 2%; */
   /* background: #ddd; */
@@ -89,6 +89,8 @@ body {
 
 
 .navbar .content {
+  overflow:hidden;
+
   max-width: 100%;
   width: 100%;
   height:6vh;
@@ -1152,7 +1154,7 @@ button.popup_close {
 
 button.popup_close:hover {
   cursor: pointer;
-  filter: drop-shadow(0px 0px 2px black);
+  filter: drop-shadow(0px 0px 10px #673313);
   /* transform: scale(1.2); */
 }
 
@@ -1180,7 +1182,7 @@ button.popup_close:hover {
   /* align-items: center; */
   /* flex-direction: column; */
   height: 600px;
-  background: #000106;
+  background: #333333;
   box-shadow: rgba(0, 0, 0, 0.3) 0px 19px 38px,
     rgba(0, 0, 0, 0.22) 0px 19px 38px;
 }
@@ -1193,7 +1195,7 @@ button.popup_close:hover {
 }
 
 .popup_content {
-  width: 90%;
+  width: 80%;
   color: white;
   /* border: 2px solid blue; */
   display: flex;
@@ -1232,8 +1234,8 @@ button.popup_close:hover {
 }
 
 .links i:hover {
-  transform: scale(1.03);
-  filter: drop-shadow(2px 2px 10px black);
+  transform: scale(1.3);
+  filter: drop-shadow(0px 0px 20px #673313);
   /* text-shadow: 2px 2px 10px black; */
 }
 
@@ -1241,12 +1243,16 @@ button.popup_close:hover {
   font-family: 'anton';
   font-weight: 0;
 }
+.popup_image h3{
+  font-family: 'Raleway';
+  font-style: italic;
+}
 
 .popup_content h2 {
   color: white;
   font-family: 'anton';
   text-transform: uppercase;
-  font-size: 4rem;
+  font-size: 3rem;
   font-weight: 500;
   text-shadow: 0px 0px 13px black;
 }
@@ -1254,9 +1260,10 @@ button.popup_close:hover {
 .popup_content h3 {
   text-decoration: none;
   font-style: none;
+  text-align:center;
   font-family: 'Raleway';
-  font-weight: 0;
-  line-height: 25px;
+  font-weight: 100;
+  line-height: 30px;
 }
 
 /* }
@@ -1342,8 +1349,8 @@ a {
 
 /* FOOTER CSS */
 :root {
-  --footer-background-color: #000106;
-  --footer-scroll-top-color: #000106;
+  --footer-background-color: #2a2a32;
+  --footer-scroll-top-color: #2a2a32;
 }
 
 .footer {
@@ -1776,7 +1783,6 @@ a {
     color: white;
     height: 40%;
 
-
   }
 
   .popup_close {
@@ -1903,6 +1909,7 @@ a {
     justify-content: space-between;
     align-items: center;
     margin: 0;
+
   }
 
   .navbar .list {
@@ -2142,7 +2149,7 @@ a {
 
  
   .links i{
-    background: black;
+    background: #222;
   }
 
   .main button {
